[gd_scene load_steps=11 format=3 uid="uid://dg3y62gxuwy0l"]

[ext_resource type="Script" uid="uid://bv2q0opebaswx" path="res://Scripts/Mains Scene/Cartinha.gd" id="1_21rx5"]
[ext_resource type="Texture2D" uid="uid://l4gk7mjm1d60" path="res://Lixo/Test Images/TemplateAlpha.png" id="1_hael8"]
[ext_resource type="Texture2D" uid="uid://d0bdxn0r7xcyy" path="res://Lixo/Test Images/icon.svg" id="2_21rx5"]
[ext_resource type="Texture2D" uid="uid://cprad188pvgyb" path="res://Lixo/Test Images/IconsElement/Air Teste.png" id="2_xkuxe"]
[ext_resource type="Texture2D" uid="uid://dw4ik082j6264" path="res://Lixo/Test Images/IconsElement/Water Teste.png" id="3_virbx"]
[ext_resource type="Texture2D" uid="uid://cbesig4xmdb4d" path="res://Lixo/Test Images/IconsElement/Fire Teste.png" id="4_5ahgr"]
[ext_resource type="Texture2D" uid="uid://btopmkgn3mhlm" path="res://Lixo/Test Images/we-do-a-little-tankie-trolling-v0-tb4dc553iike1.webp" id="4_32576"]
[ext_resource type="Texture2D" uid="uid://bp31ym5g5j6ay" path="res://Lixo/Test Images/IconsElement/Earth Teste.png" id="5_occrc"]
[ext_resource type="Texture2D" uid="uid://cm48veqtkogf" path="res://Lixo/Test Images/IconsElement/Light Teste.png" id="6_rs7on"]
[ext_resource type="Texture2D" uid="uid://dxg18ft6bxrcq" path="res://Lixo/Test Images/IconsElement/Darkness Teste.png" id="7_vjtgo"]

[node name="Card" type="Node2D" node_paths=PackedStringArray("ElementIcons", "CardIlustrationS", "NameT", "CostT", "EffectT", "AttackT", "BlockT")]
script = ExtResource("1_21rx5")
CardIlustration = Object(Sprite2D,"_import_path":NodePath(""),"unique_name_in_owner":false,"process_mode":0,"process_priority":0,"process_physics_priority":0,"process_thread_group":0,"physics_interpolation_mode":0,"auto_translate_mode":0,"editor_description":"","visible":true,"modulate":Color(1, 1, 1, 1),"self_modulate":Color(1, 1, 1, 1),"show_behind_parent":false,"top_level":false,"clip_children":0,"light_mask":1,"visibility_layer":1,"z_index":0,"z_as_relative":true,"y_sort_enabled":false,"texture_filter":0,"texture_repeat":0,"material":null,"use_parent_material":false,"position":Vector2(-0.749996, -40.75),"rotation":0.0,"scale":Vector2(1.21484, 1.21484),"skew":0.0,"texture":ExtResource("2_21rx5"),"centered":true,"offset":Vector2(0, 0),"flip_h":false,"flip_v":false,"hframes":1,"vframes":1,"frame":0,"region_enabled":false,"region_rect":Rect2(0, 0, 0, 0),"region_filter_clip_enabled":false,"script":null)

ElementIcons = [NodePath("template/ElementIcons/ElementAttack"), NodePath("template/ElementIcons/ElementDefense"), NodePath("template/ElementIcons/ElementEffect")]
ElementIconsTexture = Array[Texture]([ExtResource("2_xkuxe"), ExtResource("3_virbx"), ExtResource("4_5ahgr"), ExtResource("5_occrc"), ExtResource("6_rs7on"), ExtResource("7_vjtgo")])
CardIlustrationS = NodePath("ilustration")
NameT = NodePath("Textinhos/Name")
CostT = NodePath("Textinhos/Cost")
EffectT = NodePath("Textinhos/Effect")
AttackT = NodePath("Textinhos/Attack Power")
BlockT = NodePath("Textinhos/Block Power")

[node name="template" type="Sprite2D" parent="."]
texture = ExtResource("1_hael8")

[node name="ElementIcons" type="Node2D" parent="template"]

[node name="ElementAttack" type="TextureRect" parent="template/ElementIcons"]
offset_left = -114.0
offset_top = -168.0
offset_right = -79.0
offset_bottom = -133.0
texture = ExtResource("2_21rx5")
expand_mode = 1

[node name="ElementDefense" type="TextureRect" parent="template/ElementIcons"]
offset_left = 79.0
offset_top = -167.0
offset_right = 114.0
offset_bottom = -132.0
texture = ExtResource("2_21rx5")
expand_mode = 1

[node name="ElementEffect" type="TextureRect" parent="template/ElementIcons"]
offset_left = 61.0
offset_top = 60.0
offset_right = 110.0
offset_bottom = 109.0
texture = ExtResource("2_21rx5")
expand_mode = 1

[node name="Textinhos" type="Node2D" parent="."]

[node name="Effect" type="RichTextLabel" parent="Textinhos"]
offset_left = -113.0
offset_top = 52.0
offset_right = 52.0
offset_bottom = 114.0
text = "Effect"

[node name="Name" type="RichTextLabel" parent="Textinhos"]
offset_left = -94.0
offset_top = 130.0
offset_right = 111.0
offset_bottom = 174.0
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Cost" type="RichTextLabel" parent="Textinhos"]
offset_left = -110.0
offset_top = 138.0
offset_right = -76.0
offset_bottom = 168.0
text = "+3"

[node name="Attack Power" type="RichTextLabel" parent="Textinhos"]
offset_left = -73.0
offset_top = -164.0
offset_right = -39.0
offset_bottom = -134.0
text = "10
"
vertical_alignment = 1

[node name="Block Power" type="RichTextLabel" parent="Textinhos"]
offset_left = 55.0
offset_top = -164.0
offset_right = 89.0
offset_bottom = -134.0
text = "10
"
vertical_alignment = 1

[node name="ilustration" type="TextureRect" parent="."]
offset_left = -116.0
offset_top = -120.0
offset_right = 114.0
offset_bottom = 37.0
texture = ExtResource("4_32576")
expand_mode = 1

[node name="Button" type="Button" parent="."]
offset_left = -127.0
offset_top = -182.0
offset_right = 124.0
offset_bottom = 182.0

[connection signal="button_down" from="Button" to="." method="_pressed"]
[connection signal="button_up" from="Button" to="." method="_released"]
